--- a/app/views/public/pages/cgv.html.erb
+++ b/app/views/public/pages/cgv.html.erb
@@ -95,7 +95,7 @@
             Vos droits 
         </div>
        
-        En application de la législation en vigueur, vous disposez d'un droit d'accès, de rectification ou d'effacement, de limitation du traitement de vos données, d'un droit d'opposition, d'un droit à la portabilité de vos données ainsi que du droit de définir des directives relatives au sort de vos données après votre décès, qui s'exercent par courrier électronique à contact@a1soir.com ou par courrier postal à l'attention Autour d'un Soir , 29 Boulevard Carnot 06400 Cannes, France, accompagné d'une copie d'un titre d'identité.
+        En application de la législation en vigueur, vous disposez d'un droit d'accès, de rectification ou d'effacement, de limitation du traitement de vos données, d'un droit d'opposition, d'un droit à la portabilité de vos données ainsi que du droit de définir des directives relatives au sort de vos données après votre décès, qui s'exercent par courrier électronique (<%= link_to "formulaire de contact", "#{contact_path}#message-form" %>) ou par courrier postal à l'attention Autour d'un Soir, 29 Boulevard Carnot 06400 Cannes, France, accompagné d'une copie d'un titre d'identité.
 
         <div class="fw-bold mt-3 mb-2">    
             La sécurité de vos données 
