--- a/app/views/public/pages/rdv.html.erb
+++ b/app/views/public/pages/rdv.html.erb
@@ -1,6 +1,6 @@
 <%= page_header("Prendre rendez-vous", "Réservez votre créneau en boutique") %>
 
-<div class="p-4 bg-white d-flex flex-column" style="background-image: url('<%= image_path('/images/dessin2.png') %>'); background-size: cover; background-position: center; background-repeat: no-repeat; position: relative; height: 100vh;">
+<div id="rdv-form" class="p-4 bg-white d-flex flex-column" style="background-image: url('<%= image_path('/images/dessin2.png') %>'); background-size: cover; background-position: center; background-repeat: no-repeat; position: relative; height: 100vh;">
     <div style="position: relative; z-index: 1; flex: 1; display: flex; flex-direction: column;">
         <%= render "public/demande_rdv/form", demande_rdv: DemandeRdv.new %>
     </div>
