--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
     <div class="d-flex align-items-center gap-2">
       <%= link_to image_tag('/images/a1soirlogo2.png', class: 'mb-0 px-2', width: "350", alt: "Logo"), root_url %>
 
-      <%= link_to rdv_url(subdomain: "shop"),
+      <%= link_to "#{rdv_url(subdomain: "shop")}#rdv-form",
           class: "btn btn-sm btn-light px-3 ms-4 me-2 d-inline-flex align-items-center btn-rdv-hover public-btn-border-radius" do %>
         <i class="bi bi-calendar-check me-2"></i>
         <span class="fw-bold text-uppercase small">Prendre rendez-vous</span>
