--- a/app/views/admin/meetings/index.html.erb
+++ b/app/views/admin/meetings/index.html.erb
@@ -3,29 +3,9 @@
 
 <%= bloc_nouveau(Meeting) %>
 
-<!--div class="container my-3 text-center">
-  <%#= link_to 'Jour', { type: 'day' }, class: active_date_range_class('day') %>
-  <%#= link_to 'Semaine', { type: 'week' }, class: active_date_range_class('week') %>
-  <%#= link_to 'Mois', { type: 'month' }, class: active_date_range_class('month') %>
-</div-->
+<div class="my-4 m-2">
 
-<div class="d-flex justify-content-center text-center my-4 m-2 overflow-auto" style="max-width: 100%; white-space: nowrap;">
-
-  <%# if @calendar_type == "day" %>
-    <%#= calendar(number_of_days: 1, events: @meetings_periode.includes(:commande, :client)) do |date, meetings| %>
-      <%#= render partial: 'calendar', locals: { date: date, meetings: meetings } %>
-    <%# end %>
-  <%# elsif @calendar_type == "week" %>
-    <%#= week_calendar(events: @meetings_periode.includes(:commande, :client)) do |date, meetings| %>
-      <%#= render partial: 'calendar', locals: { date: date, meetings: meetings } %>
-    <%# end %>
-  <%# elsif @calendar_type == "month" %>
-    <%#= month_calendar(events: @meetings_periode.includes(:commande, :client)) do |date, meetings| %>
-      <%#= render partial: 'calendar', locals: { date: date, meetings: meetings } %>
-    <%# end %>
-  <%# end %>
-
-  <iframe src="<%= google_calendar_embed_url %>" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+  <iframe src="<%= google_calendar_embed_url %>" style="border:solid 1px #777; width: 100%; height: 800px;" frameborder="0" scrolling="no"></iframe>
 
 </div>
 
@@ -44,13 +24,5 @@
 
   <% end %>
 
-
-  <div class="container-fluid text-end">
-    <%#= link_to "S'abonner au calendrier", meetings_url(protocol: :webcal, format: :ics), 
-          class:"btn btn-sm btn-dark fw-bold" %>  
-    <%#= render 'copy_url_button' %>
-    <%#= link_to "Download Calendar (ICS)", download_ics_meetings_path, class: "btn btn-primary" %>
-
-  </div>
  
 </div>
