--- a/app/views/public/demande_rdv/_form.html.erb
+++ b/app/views/public/demande_rdv/_form.html.erb
@@ -61,6 +61,9 @@
                 </a>
                 <h4 class="text-dark text-center fw-bold" style="letter-spacing: 0.5px;">
                   Choisissez un horaire
+                  <small class="text-muted d-block" style="font-size: 0.7em; font-weight: normal;">
+                    (Heure de Paris)
+                  </small>
                 </h4>
                 <div style="width: 100px;"></div> <!-- Spacer pour centrer le titre -->
               </div>
