consistant recpatcha with custom code

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -31,6 +31,9 @@
   </head>
 
   <body class="pb-4 bg-black">
+    <!-- Google reCAPTCHA v2 -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    
     <!-- Container Three.js pour le ciel étoilé (toutes les pages) -->
     <div id="three-container"></div>
     
