--- a/app/views/public/pages/_contact_form.html.erb
+++ b/app/views/public/pages/_contact_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: contact_message, url: send_contact_message_path, class: "needs-validation", data: { controller: "recaptcha-submit" }, id: "contact_form" do |form| %>
+<%= form_with model: contact_message, url: send_contact_message_path, class: "needs-validation", id: "contact_form" do |form| %>
 
     <div class="my-5 py-5" data-scroll-reveal>
       <div class="container">
@@ -67,13 +67,13 @@
 
                 <!-- reCAPTCHA -->
                 <div class="mb-4 d-flex justify-content-center">
-                    <%= recaptcha_tags theme: 'light', callback: 'onRecaptchaSuccess', expired_callback: 'onRecaptchaExpired', error_callback: 'onRecaptchaError' %>
+                    <div class="g-recaptcha" data-sitekey="<%= ENV['RECAPTCHA_SITE_KEY'] %>"></div>
                 </div>
 
                 <!-- Bouton -->
                 <div class="d-flex justify-content-center">
-                    <button type="submit" data-recaptcha-submit-target="submitBtn" class="btn btn-dark btn-lg px-5 public-btn-border-radius disabled" disabled style="opacity: 0.6; cursor: not-allowed;">
-                    <i class="bi bi-lock me-2"></i>Validez d'abord le reCAPTCHA
+                    <button type="submit" class="btn btn-dark btn-lg px-5 public-btn-border-radius">
+                    <i class="bi bi-send me-2"></i>Envoyer le message
                     </button>
                 </div>
                 <% end %>
