--- a/app/views/public/pages/produit/_produit.html.erb
+++ b/app/views/public/pages/produit/_produit.html.erb
@@ -3,29 +3,32 @@
     <div data-controller="placeholder-card">
 
           <!-- Card with Placeholder -->
-          <div class="card card-placeholder bg-dark text-light" aria-hidden="true">
-
-              <div class="placeholder col-12" style="height: 300px; background-color: #3a3a3a;">
-              </div>
+          <div class="card card-placeholder bg-dark text-light border-secondary" aria-hidden="true" data-placeholder-card-target="placeholder">
+              <!-- Placeholder image/carousel -->
+              <div class="placeholder card-img-top carousel-multiple" style="height: 300px; background-color: #3a3a3a;"></div>
                       
               <div class="card-body">
-                  <h5 class="card-title placeholder-glow" data-placeholder-card-target="placeholder">
-                      <span class="placeholder col-6 bg-secondary"></span>
+                  <!-- Placeholder titre -->
+                  <h5 class="card-title placeholder-glow">
+                      <span class="placeholder col-8 bg-secondary"></span>
                   </h5>
-                  <p class="card-text placeholder-glow">
-                      <span class="placeholder col-7 bg-secondary"></span>
-                      <span class="placeholder col-4 bg-secondary"></span>
-                      <span class="placeholder col-4 bg-secondary"></span>
-                      <span class="placeholder col-6 bg-secondary"></span>
-                  </p>
-                  <p class="card-text placeholder-glow d-flex justify-content-between">
+                  
+                  <!-- Placeholder prix (2 badges) -->
+                  <p class="card-text placeholder-glow d-flex justify-content-between m-0">
                       <span class="placeholder col-5 bg-secondary"></span>
-                      <span class="placeholder col-6 bg-secondary"></span>
+                      <span class="placeholder col-5 bg-secondary"></span>
                   </p>
+                  
+                  <!-- Placeholder taille -->
                   <p class="card-text placeholder-glow d-flex justify-content-between">
                       <span class="placeholder col-4 bg-secondary"></span>
-                      <span class="placeholder col-4 bg-secondary"></span>
+                      <span></span>
                   </p>
+                  
+                  <!-- Placeholder bouton -->
+                  <div class="placeholder-glow">
+                      <span class="btn btn-sm w-100 placeholder bg-secondary" style="height: 38px;"></span>
+                  </div>
               </div>
           </div>
 
@@ -33,7 +36,6 @@
           <div class="card card-content bg-dark text-light border-secondary" data-placeholder-card-target="content" style="display:none;">
               
               <%= link_to produit_path(slug: produit.nom.parameterize, id: produit.id), class: "text-decoration-none", data: { turbo: false } do %>
-                  <%#= image_tag(produit.default_image, class: "card-img-top", style: "max-height: 300px; object-fit: cover;") %>
                   <%= render partial: "public/pages/carousel", locals: { produit: produit, carousel_class: "card-img-top carousel-multiple" } %>
               <% end %>
 
@@ -55,7 +57,6 @@
                       <% else %>
                          <span></span>
                       <% end %>
-                      <%#= statut_disponibilite_shop(produit.statut_disponibilite(Time.now, Time.now)[:statut]) %>
                   </p>
                   
                   <% if session[:from_cabine] %>
